--- a/main/res/values/colors.xml
+++ b/main/res/values/colors.xml
@@ -29,6 +29,7 @@
 
     <color name="default_trailcolor">#80000000</color>
     <color name="default_routecolor">#800000FF</color>
+    <color name="default_trackcolor">#80008000</color>
     <color name="default_directioncolor">#80FF3333</color>
     <color name="default_circlecolor">#44BB0000</color>
     <color name="default_circlefillcolor">#66BB0000</color>
