--- a/main/res/xml/preferences.xml
+++ b/main/res/xml/preferences.xml
@@ -676,22 +676,62 @@
 
         <PreferenceCategory android:title="@string/init_maplines_title"
             android:layout="@layout/preference_category">
+
             <cgeo.geocaching.settings.ColorpickerPreference
                 android:title="@string/init_trailcolor"
                 android:key="@string/pref_mapline_trailcolor"
                 android:defaultValue="@color/default_trailcolor"
                 android:dependency="@string/pref_maptrail"
                 app:showOpaquenessSlider="true" />
+            <Preference
+                android:title="@string/init_trailwidth"
+                android:dependency="@string/pref_maptrail"
+                android:selectable="false" />
+            <cgeo.geocaching.settings.MapLineWidthPreference
+                android:key="@string/pref_mapline_trailwidth"
+                android:defaultValue="@integer/default_trailwidth"
+                android:dependency="@string/pref_maptrail"
+                android:layout="@layout/preference_seekbar" />
+
             <cgeo.geocaching.settings.ColorpickerPreference
                 android:title="@string/init_directioncolor"
                 android:key="@string/pref_mapline_directioncolor"
                 android:defaultValue="@color/default_directioncolor"
                 app:showOpaquenessSlider="true" />
+            <Preference
+                android:title="@string/init_directionwidth"
+                android:selectable="false" />
+            <cgeo.geocaching.settings.MapLineWidthPreference
+                android:key="@string/pref_mapline_directionwidth"
+                android:defaultValue="@integer/default_directionwidth"
+                android:layout="@layout/preference_seekbar" />
+
             <cgeo.geocaching.settings.ColorpickerPreference
                 android:title="@string/init_routecolor"
                 android:key="@string/pref_mapline_routecolor"
                 android:defaultValue="@color/default_routecolor"
                 app:showOpaquenessSlider="true" />
+            <Preference
+                android:title="@string/init_routewidth"
+                android:selectable="false" />
+            <cgeo.geocaching.settings.MapLineWidthPreference
+                android:key="@string/pref_mapline_routewidth"
+                android:defaultValue="@integer/default_routewidth"
+                android:layout="@layout/preference_seekbar" />
+
+            <cgeo.geocaching.settings.ColorpickerPreference
+                android:title="@string/init_trackcolor"
+                android:key="@string/pref_mapline_trackcolor"
+                android:defaultValue="@color/default_trackcolor"
+                app:showOpaquenessSlider="true" />
+            <Preference
+                android:title="@string/init_trackwidth"
+                android:selectable="false" />
+            <cgeo.geocaching.settings.MapLineWidthPreference
+                android:key="@string/pref_mapline_trackwidth"
+                android:defaultValue="@integer/default_trackwidth"
+                android:layout="@layout/preference_seekbar" />
+
             <cgeo.geocaching.settings.ColorpickerPreference
                 android:title="@string/init_circlecolor"
                 android:key="@string/pref_mapline_circlecolor"
