--- a/main/res/values/strings_not_translatable.xml
+++ b/main/res/values/strings_not_translatable.xml
@@ -40,16 +40,17 @@
     <!-- one line per contributor, format is: <name>|<link>|<contribution identifiers>| -->
     <!-- (contribution identifiers are: c=code, d=documentation, g=graphics, p=project leader, s=support, t=testing) -->
     <string translatable="false" name="contributors_recent">
-    avogadogc|||
     Bananeweizen||c|
     bekuno||c|
-    emividmark|||
-    following5|||
-    HolgerJeromin|||
+    capoaira|https://github.com/capoaira|c|
+    eddiemuc|https://github.com/eddiemuc|c|
+    fm-sys|https://github.com/fm-sys|c|
+    jakedot||c|
+    jgoestl||c|
     jonas-koeritz||c|
     Lineflyer|https://www.geocaching.com/email/?guid=d11a3e3d-7db0-4d43-87f2-7893238844a6|tsd|
+    MagpieFourtyTwo|https://github.com/MagpieFourtyTwo|t|
     moving-bits|https://github.com/moving-bits|cg|
-    msperkowski|||
     mucek4||cp|
     okainov||c|
     Peter Storch||c|
@@ -62,13 +63,17 @@
     <!-- other contributors, meaning: before last year -->
     <!-- same format as contributors_recent string -->
     <string translatable="false" name="contributors_other">
+    avogadogc|||
     Arne Schwabe||c|
     bjdupuis||c|
     blafoo||c|
     campbeb||c|
     ControlTheBit||c|
     Eisbehr||c|
+    emividmark|||
     Filipe C.||c|
+    following5|||
+    HolgerJeromin|||
     Iiro Jäppinen||g|
     Jan Žatecký|https://www.jaytech.cz/|g|
     JoWi24|https://joachim-wilke.de/|c|
@@ -79,6 +84,7 @@
     Mathieu Alorent||c|
     Matze2||c|
     MichielK||c|
+    msperkowski|||
     ncorreia||c|
     Pavol Babinčák||c|
     Portree Kid|https://github.com/Portree-Kid|c|
